:rocket: Choose package name and go for it

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,7 +1,7 @@
 .app {
   color: black;
 }
-.wtfoo-emoji-docs {
+.react-emojis-docs {
   display: flex;
   align-items: stretch;
   flex-wrap: wrap;
