:sparkles: Introduce 'filter' emojis input and several other improvements
- Improve presentation and styles for 'App', which is now a page where one can see all emojis available and filter them
- Introduce 'Icons' component
- Introduce 'Search' component
- Introduce 'containsStringUtil' util

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,6 +1,25 @@
 .app {
   color: black;
 }
+.header {
+  width: 100%;
+  &__content {
+    box-sizing: border-box;
+    padding: 20px;
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+    h1 {
+      margin-top: 0;
+    }
+    h2 {
+      font-size: 18px;
+    }
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
 .react-emojis-docs {
   display: flex;
   align-items: stretch;
