--- a/src/app/components/Search.scss
+++ b/src/app/components/Search.scss
@@ -10,7 +10,7 @@
   &__input {
     border: 1px solid #222;
     padding: 10px 35px;
-    font-size: 13px;
+    font-size: 16px; // Avoid 'zoom' on iOS devices
     color: #222;
     width: 100%;
     line-height: 1.2;
