--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,3 +1,6 @@
+$border-layout: 3px solid lightgray;
+$gutter-size: 20px;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,6 +8,46 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  * {
+    box-sizing: border-box;
+  }
+  position: relative;
+}
+
+.header {
+  width: 100%;
+  &__content {
+    box-sizing: border-box;
+    padding: 20px;
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+    h1,
+    h2 {
+      margin: 15px 0;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    h2 {
+      font-size: 18px;
+    }
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: $gutter-size/2 0;
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+  border-top: $border-layout;
+  background-color: white;
 }
 
 code {
